# learn-qml

./: .gitignore  Main.qml
02/: myqml.qml
03/3-1/: myitem.qml
03/3-12/: mytextinput.qml
03/3-13/: mytextinput.qml
03/3-14/: mytextinput.qml
03/3-15/: mytextinput.qml
03/3-16/: NewTextInput.qml  mytextinput.qml
03/3-17/: mytextedit.qml
03/3-18/: mytextedit.qml
03/3-2/: myitem.qml
03/3-3/: myrectangle.qml
03/3-4/: mytext.qml
03/3-5/: mytext.qml
03/3-6/: mytext.qml
03/3-7/: mytext.qml
BYD/: CMakeLists.txt  main.cpp  resources.qrc
BYD/Components/: ACBar.qml  ACFan.qml  ColorSlider.qml  FunctionBar3.qml  IconButton.qml  Navigation.qml  QuickSlider.qml  SettingsFunctionBar.qml  SettingsList.qml  SettingsModeBar.qml  StatusBar.qml
BYD/HMI/: AC.qml  App.qml  Home.qml  Settings.qml
BYD/Interface/: Interface.cpp  Interface.h
Components/: ACFunctionBar.qml  FunctionBar2.qml  IconSwitch.qml  QuickTemperatureList.qml  QuickWind.qml  SwipeArea.qml
HMI/: ControlCenter.qml
Interface/: Interface.cpp
SaCalculator/: CMakeLists.txt  compile_commands.json  main.cpp
SaCalculator/.cache/clangd/index/: CalcBridge.cpp.7F065926A5AE4A5B.idx  CalcBridge.h.07C7B26A2ACC79CA.idx  common.cpp.24BB89D3A7EDD0F1.idx  common.h.B61FE003CEE36A40.idx  main.cpp.BC7D6E257365B291.idx  sa.cpp.DD9FF11FCD2D1A17.idx  sa.h.D2EABA522C41DEA4.idx
SaCalculator/Interface/: Interface.cpp  Interface.h
SaCalculator/qml/: Main.qml
SaCalculator/sa/: common.cpp  common.h  sa.cpp  sa.h
cmakeqt/01/: CMakeLists.txt  main.cpp  main_1.cpp
offcialdemo/: main.qml
offcialdemo/common/: IconButton.qml  MainView.qml  SlideSelector.qml  TabBar.qml  TabBarItem.qml  TextButton.qml  ToolBarItem.qml
offcialdemo/home/: HomeView.qml  QuickActions.qml  Terrain.qml
